--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "errorhandler": "^1.5.0",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "nconf": "^0.9.1",
+    "serve-favicon": "~2.4.5",
+    "winston": "^2.4.0"
   }
 }
